privatebin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: privatebin-ingress
  namespace: privatebin
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - bin.512.ch
    secretName: privatebin-tls 
  rules:
  - host: bin.512.ch
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: privatebin
            port:
              number: 80
